完善relay connection支持